goLearning/go-project-learning/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-project-test
