goLearning/go-project-learning/deploy/k8s/mysql-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: go-project-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            # 挂载初始化 SQL 目录
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
      volumes:
        - name: mysql-storage
          emptyDir: {}
        # 引用 ConfigMap 作为 Volume
        - name: mysql-init
          configMap:
            name: mysql-init-sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: go-project-test
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
